2007-11-30  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/camera.h: Fixed up the documentation a little.

	* libavogadro/src/engines/ringengine.cpp,
	libavogadro/src/engines/ringsettingswidget.ui: Make the rings opaque by
	default.

	* avogadro/src/mainwindow.h: Fix the API documentation title.

2007-11-30  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/primitiveitemmodel.cpp: Add back missing
	functionality from MoleculeTreeView. Atoms now have elements,
	residues have names and numbers, etc. May need further tinkering.

	* libavogadro/src/tools/drawtool.cpp: Minor changes to SMILES
	text.

	* libavogadro/src/tools/autoopttool.cpp: Remove "OBPatched"
	ifdefs. These are now all supported in OB-2.2.

	* libavogadro/src/residuecolor.[h,cpp]: New class to color based
	on Jmol "amino" residue colors.

	* libavogadro/src/color.h, libavogadro/src/elementcolor.h: Updates
	missing in yesterday's commit. Include a settings widget for
	expansion in subclasses.

2007-11-29  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/color.[h,cpp]: Make into a cleaner base class
	for custom color maps. Add a name() property to return the
	user-visible name of the color scheme.

	* libavogadro/src/elementcolor.[h,cpp]: New subclass for the
	default scheme.

	* libavogadro/src/engine.[h,cpp]: Revise colorMap() routines to
	pass pointers to preserve subclasses.

	* libavogadro/src/engines/*.cpp: Fix engines to use new colorMap
	support, including fallback between custom (i.e., per-engine) and
	global color maps. Lift color maps outside of loops for improved
	performance.

	* libavogadro/src/glwidget.[h,cpp]: Add support for adding a
	global, custom color map for primitives. By default, falls back to
	the ElementColor scheme (i.e., color each atom by the element type).

	* libavogadro/src/painterdevice.h, libavogadro/src/povpainter.h:
	Add PainterDevice wrapping of the GLWidget colorMap, as above.
