@@ -36,10 +36,12 @@ namespace Avogadro {
   class ColorPrivate; // for future expansion
   
   /**
-   * This class represents a color in OpenGL float red-green-blue-alpha format.
-   *
+   * @class Color color.h <avogadro/color.h>
    * @author Benoit Jacob
    * @author Geoff Hutchison
+   * @brief Color in OpenGL float red, green, blue, alpha format.
+   * 
+   * This class represents a color in OpenGL float red, green, blue, alpha format.
    */
   class A_EXPORT Color
   {
@@ -50,36 +52,43 @@ namespace Avogadro {
     /**
      * This constructor sets the four components of the color
      * individually. Each one ranges from 0.0 (lowest intensity) to
-     * 1.0 (highest intensity). For the alpha component, 0.0 means fully
-     * transparent and 1.0 (the default) means fully opaque. */
+     * 1.0 (highest intensity). For the alpha component, 0.0 means totally
+     * transparent and 1.0 (the default) means totally opaque. */
     Color( GLfloat red, GLfloat green, GLfloat blue,
         GLfloat alpha = 1.0 );
 
     /**
-     * Set the color based on the supplied Primitive
-     * If NULL is passed, do nothing */
+     * Set the color based on the supplied Primitive.
+     * If NULL is passed do nothing. 
+     * @param Primitive the color is derived from this primitive.
+     */
     Color( const Primitive * );
 
     /**
      * Set the four components of the color
      * individually. Each one ranges from 0.0 (lowest intensity) to
-     * 1.0 (highest intensity). For the alpha component, 0.0 means fully
-     * transparent and 1.0 (the default) means fully opaque. */
+     * 1.0 (highest intensity). For the alpha component, 0.0 means totally
+     * transparent and 1.0 (the default) means totally opaque. */
     virtual void set(GLfloat red, GLfloat green, GLfloat blue,
                      GLfloat alpha = 1.0 );
 
     /**
-     * Set the color based on the supplied Primitive
-     * If NULL is passed, do nothing */
+     * Set the color based on the supplied Primitive.
+     * If NULL is passed do nothing.
+     * @param Primitive the color is derived from this primitive.
+     */
     virtual void set(const Primitive *);
 
     /**
-     * Set the alpha component of the color */
+     * Set the alpha component of the color, 0.0 means totally transparent and
+     * 1.0 means totally opaque.
+     */
     virtual void setAlpha(double alpha);
 
     /**
      * Sets this color to be the one used by OpenGL for rendering
-     * when lighting is disabled. */
+     * when lighting is disabled.
+     */
     inline virtual void apply()
     {
       glColor4fv( &m_red );
@@ -88,34 +97,77 @@ namespace Avogadro {
     /**
      * Applies nice OpenGL materials using this color as the
      * diffuse color while using different shades for the ambient and
-     * specular colors. This is only useful if lighting is enabled. */
+     * specular colors. This is only useful if lighting is enabled.
+     */
     virtual void applyAsMaterials();
     
     /**
-     * Applies an OpenGL material more appropriate for flat surfaces. */
+     * Applies an OpenGL material more appropriate for flat surfaces.
+     */
     virtual void applyAsFlatMaterials();
 
+    /**
+     * @return the red component of the color.
+     */
     inline float red() { return m_red; }
+    /**
+     * @return the green component of the color.
+     */
     inline float green() { return m_green; }
+    /**
+     * @return the blue component of the color.
+     */
     inline float blue() { return m_blue; }
+    /**
+     * @return the alpha component of the color.
+     */
     inline float alpha() { return m_alpha; }
     
+    /**
+     * Set the name of this instance of the class.
+     */
     virtual void setName(QString name);
+    /**
+     * @return the name of this instance of the class.
+     */
     virtual QString name() const;
+    /**
+     * @return the type of the Color class.
+     */
     virtual QString type() const { return "Virtual Base Class"; }
 
     /**
      * @return the widget for controlling settings for this color map
-     * or NULL if none exists */
+     * or NULL if none exists. */
     virtual QWidget *settingsWidget() { return NULL; }
 
   protected:
-    ///{ The four components of the color, ranging between 0 and 1.
+    /**
+     * \var GLfloat m_red
+     * The red component of the color ranging from 0 to 1.
+     */
+    /**
+     * \var GLfloat m_green
+     * The green component of the color ranging from 0 to 1.
+     */
+    /**
+     * \var GLfloat m_blue
+     * The blue component of the color ranging from 0 to 1.
+     */
+    /**
+     * \var GLfloat m_alpha
+     * The alpha component of the color ranging from 0 to 1.
+     */
     GLfloat m_red, m_green, m_blue, m_alpha;
-    ///}
     
+    /**
+     * The name of the class instance.
+     */
     QString m_name;
     
+    /**
+     * The d-pointer used to preserve binary compatibility.
+     */
     ColorPrivate *d;
   };
 
